--- a/DFIM_BatteryCoating.ipynb
+++ b/DFIM_BatteryCoating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,14 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/200 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [00:06<00:00, 31.65it/s]\n"
+      "100%|██████████| 200/200 [00:05<00:00, 33.64it/s]\n"
      ]
     }
    ],
@@ -131,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [02:26<00:00, 29.31s/it]\n"
+      "100%|██████████| 5/5 [02:27<00:00, 29.49s/it]\n"
      ]
     }
    ],
@@ -254,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +261,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:00<00:00, 267.80it/s]\n"
+      "100%|██████████| 200/200 [00:00<00:00, 232.81it/s]\n"
      ]
     }
    ],
@@ -319,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,28 +398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/5 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 25.52it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exponential\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 26.33it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 26.73it/s]\n"
      ]
     }
    ],
@@ -434,7 +406,7 @@
     "seedid = 19940402\n",
     "np.random.seed(seedid)\n",
     "TrnLen = 10 #30000\n",
-    "SeqLen = 5\n",
+    "SeqLen = 5 # full scale is 1000\n",
     "ARL0 = 1000\n",
     "\n",
     "ControlType = 'OutControl'\n",
@@ -475,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +456,7 @@
        "(5, 10, 100, 200)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,13 +464,6 @@
    "source": [
     "trnN.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -516,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +815,7 @@
        "(200, 200)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +858,7 @@
        "(5, 1000, 200)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,6 +870,9 @@
     "rho = 0.3 \n",
     "CovType = 'TriDiagonal'\n",
     "phi = 0.3\n",
+    "deltanorm = 2 # the norm of shift for Type1\n",
+    "ShiftType = 'Sparse'\n",
+    "\n",
     "Tag = (ControlType,DataType,CovType,DistType,ShiftType,'phi',str(phi),'rho',str(rho),'deltanorm',str(deltanorm))\n",
     "TagJoin = ''.join(Tag)\n",
     "print(Tag)\n",
@@ -914,14 +882,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 196/196 [00:00<00:00, 627.32it/s]\n"
+      "100%|██████████| 196/196 [00:00<00:00, 663.06it/s]\n"
      ]
     },
     {
@@ -937,7 +905,7 @@
        "0.009914843493262543"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,14 +918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 14.05it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 13.36it/s]\n"
      ]
     }
    ],
@@ -970,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +947,7 @@
        "(70.2, 38.81443030626625)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +974,7 @@
        "(200, 100, 200)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,6 +988,8 @@
     "Phi = phi * np.eye(p)\n",
     "m = 5*np.ones([w,p])\n",
     "CovType = 'TriDiagonal'\n",
+    "DeltaNorm = 10 # the norm of shift for Type2\n",
+    "ShiftType = 'Chessboard'\n",
     "\n",
     "TagN = (ControlType,DataType,CovType,'Normal','phi',str(phi),'rho',str(rho))\n",
     "TagNJoin = ''.join(TagN)\n",
@@ -1031,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1010,7 @@
        "(20000, 200)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1036,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:00<00:00, 366.40it/s]"
+      "100%|██████████| 200/200 [00:00<00:00, 420.56it/s]\n"
      ]
     },
     {
@@ -1077,19 +1047,12 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "0.008076262628982048"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,27 +1137,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 37.64it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 38.82it/s]\n"
      ]
     }
    ],
    "source": [
     "RL = []\n",
-    "for i in tqdm(range(5)): # the full scale is 5\n",
+    "for i in tqdm(range(5)): # the full scale is 1000\n",
     "    dfim2.monitor_exp_image(max_RL=10000, M=M_shifted)\n",
     "    RL.append(dfim2.RL)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1166,7 @@
        "(1.0, 0.0)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
